--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,9 +32,9 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        tools:layout_editor_absoluteX="187dp" />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
