--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,6 +102,13 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"/>
 
+                <com.google.android.gms.common.SignInButton
+                    android:layout_gravity="center"
+                    android:id="@+id/sign_in_button"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_height="wrap_content"/>
                 <TextView
                     android:id="@+id/loginButtonCadastrese"
                     android:layout_width="wrap_content"
